--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_cadastro">Cadastro</string>
     <string name="title_activity_listar_todos">ListarTodos</string>
     <string name="title_activity_pesquisar">Pesquisar</string>
+    <string name="title_activity_apague">apague</string>
 </resources>
