--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_activity_listar_todos">ListarTodos</string>
     <string name="title_activity_pesquisar">Pesquisar</string>
     <string name="title_activity_apague">apague</string>
+    <string name="title_activity_editar">Editar</string>
+    <string name="title_activity_listar">Listar</string>
 </resources>
